--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,8 @@ firebaseBom = "33.4.0"
 googleServices = "4.4.4"
 navigationCompose = "2.7.7"
 mapsCompose = "6.12.1"
-materialIconsExtended = "1.6.8"  # ← AGREGADO: VERSIÓN FIJA
+materialIconsExtended = "1.6.8"
+coil = "2.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,8 +41,11 @@ firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage
 # Google Maps
 maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "mapsCompose" }
 
-# ICONOS (Material 1 - Compatible con Material 3)
+# ICONOS
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIconsExtended" }
+
+# COIL (IMÁGENES)
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
